# vgloss

./: .gitignore  README.md  dev-requirements.txt  manage.py  package.json  requirements.in  requirements.txt  setup.cfg  setup.py  vue.config.js
public/: index.html  vue-single-page.html
src/: App.vue  FileDetailModal.vue  FolderFilterTree.vue  GalleryGrid.vue  StateManager.js  TagEditModal.vue  Tree.vue  actions.js  main.js  queries.js  router.js  state.js  store.js  urls.js  utils.js
src/gallery/: FileDetailModal.vue  Gallery.vue  GalleryGrid.vue  TagEditModal.vue
src/router/: index.js
src/state/: files.js  index.js  manager.js
src/views/: Gallery.vue  Home.vue
tests/: test_file.py  test_file_tag.py  test_gallery.py  test_scan.py  test_tag.py  testdata.py
vgloss/: actions.py  admin.py  api.py  apps.py  asgi.py  main.py  models.py  scan.py  serializers.py  settings.py  thumbnail.py  urls.py  views.py  wsgi.py
vgloss/migrations/: 0001_initial.py  0002_tags.py  0003_auto_20200703_1003.py  0004_tag_parent.py
