
[metadata]
name = vgloss
version = 0.1
author = Michael S. Brown
#url =
description = Photo organizer and gallery
long_description = file: README.md
license = MIT
classifiers=
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

packages=vgloss
zip_safe=True

[options.entry_points]
console_scripts =
    vgloss = vgloss.main:main
